[project]
name = "mimir-poc"
version = "0.2.0"
description = "Proof of concept for Mimir travel companion app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=0.0.46",
    "pydantic>=2.11.0",
    "streamlit>=1.41.1",
    "pillow>=11.1.0",
    "nest-asyncio>=1.6.0",
    "google-cloud-texttospeech<=2.25.0",
]

[dependency-groups]
dev = ["ruff>=0.9.4"]
